# handlebars

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  dispatcher.hpp  dispatcher.ipp  pp.hpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  utility.hpp
docs/: advanced_usage.md  basic_usage.md
example/: arsenal.hpp  connected.hpp  dispatch_use.cpp  handler_use.cpp
example/arithmetic/: main.cpp
example/demo1/: demo1.cpp
example/demo2/: demo2.cpp
example/demo3/: demo3.cpp
example/edgewise/: main.cpp
example/function/: main.cpp
example/global_api/: main.cpp
example/logger/: main.cpp
example/lvalues/: main.cpp
example/minimal_api/: main.cpp
example/ordered/: main.cpp
example/repl/: main.cpp  repl.h
example/repl_multithread/: main.cpp  repl.h
example/rvalues/: main.cpp
example/sharing/: main.cpp
examples/easy/arithmetic/: main.cpp
examples/easy/edgewise/: main.cpp
examples/easy/logger/: main.cpp
examples/easy/lvalues/: main.cpp
examples/easy/ordered/: main.cpp
examples/easy/repl/: main.cpp  repl.h
examples/easy/rvalues/: main.cpp
examples/fast/arithmetic/: main.cpp
include/: dispatcher.hpp  dispatcher.ipp  trigger.hpp  tuple.hpp  typelist.hpp  utility.hpp  variant.hpp
include/events/: dispatcher.hpp  handler.hpp  utility.hpp
include/handlebars/: dispatcher.hpp  function.hpp  handler.hpp  handles.hpp  shared_handler.hpp
include/handlebars/fast/: dispatcher.hpp  handles.hpp  static_queue.hpp  static_stack.hpp
tests/: CMakeLists.txt  test1.cpp  test2.cpp  tuple_test1.cpp  typelist_test1.cpp
tests/function/: main.cpp
